WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68724
ValueToDouble handling in prediction propagation should be ASSERT_NOT_REACHED
https://bugs.webkit.org/show_bug.cgi?id=68724
Summary
ValueToDouble handling in prediction propagation should be ASSERT_NOT_REACHED
Filip Pizlo
Reported
2011-09-23 13:30:15 PDT
ValueToDouble is inserted as a result of prediction propagation. It should never be inserted by the parser. Hence, it should be handled by the prediction propagator by asserting that the case is not reached.
Attachments
the patch
(1.25 KB, patch)
2011-09-23 13:31 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-23 13:31:41 PDT
Created
attachment 108525
[details]
the patch
WebKit Review Bot
Comment 2
2011-09-23 15:57:41 PDT
Comment on
attachment 108525
[details]
the patch Clearing flags on attachment: 108525 Committed
r95876
: <
http://trac.webkit.org/changeset/95876
>
WebKit Review Bot
Comment 3
2011-09-23 15:57:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug