ValueToDouble handling in prediction propagation should be ASSERT_NOT_REACHED https://bugs.webkit.org/show_bug.cgi?id=68724

Reviewed by Oliver Hunt.

* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::propagateNodePredictions):


Canonical link: https://commits.webkit.org/84695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95876 268f45cc-cd09-0410-ab3c-d52691b4dbfc